- Query
 - Wherever possible the order of variables in the SELECT clause will now be respected in SparqlResultSet objects (CORE-342)
- Storage
 - SesameNativeTemplate is now a public class
 - AllegroGraphConnector now implements IUpdateableStorage and IAsyncUpdateableStorage (CORE-308)
- Writing
 - Improved how characters are escaped (counterpart to stricter escape handling) which provides better round tripping of data (CORE-314)

Removed
- Removed defunct TalisException
- Removed defunct internal class InternalXmlWriter
- Marked DydraConnector with an obsolete usable due to continuing inconsistency and transient failures from the Dydra API
- Removed defunct Project class


0.9.0 RC4
---------

Added
- Ontology API
 - Added Direct/Indirect SubClasses and SuperClasses property on OntologyClass (CORE-295)
 - Added Direct/Indirect SubProperties and SuperProperties property on OntologyProperty (CORE-295)
 - Added Siblings property on OntologyClass and OntologyProperty (CORE-296)
 - Added IsTopClass and IsBottomClass property on OntologyClass (CORE-293)
 - Added IsTopProperty and IsBottomProperty on OntologyProperty (CORE-293)
 - Added Owl/Rdf/All Classes and Properties properties on OntologyGraph (CORE-293)
 - Added AsClass() and AsProperty() methods on OntologyResource (CORE-293)

Changed
- Bug Fixes
 - Fix a bug to allow OrderByVariable to take variable name with/without leading ?/$ 
 - Fix a bug in SparqlJsonParser relating to some valid data being rejected due to Json.Net perculiarities (CORE-290)
 - Fix a bug in the streaming mode of the RDF/XML parser not respecting external Base URI (CORE-216)
 - Fix a corner case bug in interaction between GRAPH clause and inner patterns that match but have no variables (CORE-294)
 - Fix a corner base base in interaction between GRAPH clauses and property paths (CORE-294)
 - Fix a bug in INSERT/DELETE commands when a GRAPH clause with an unbound variable is used (CORE-300)
 - Fix a bug with the XPath Replace function (CORE-299)