@@ -1,20 +1,28 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<TestRunConfiguration name="Tests" id="832e8b63-436f-4292-ba51-c92cddc3430d" xmlns="http://microsoft.com/schemas/VisualStudio/TeamTest/2010">
+﻿<?xml version="1.0" encoding="UTF-8"?>
+<TestSettings name="Tests" id="832e8b63-436f-4292-ba51-c92cddc3430d" xmlns="http://microsoft.com/schemas/VisualStudio/TeamTest/2010">
   <Description>This is a default test run configuration for a local test run.</Description>
   <Deployment>
-    <DeploymentItem filename="Testing\testsuite\sparqlparser_tests\graphs\data-g4.ttl" />
-    <DeploymentItem filename="Testing\testsuite\sparqlparser_tests\optional\complex-data-2.ttl" />
     <DeploymentItem filename="Testing\unittest\bin\Debug\resources\" />
-    <DeploymentItem filename="Testing\testsuite\sparqlparser_tests\optional\result-opt-complex-4.ttl" />
-    <DeploymentItem filename="Testing\unittest\dotNetRDFUnitTests.dll.config" />
-    <DeploymentItem filename="Testing\testsuite\sparqlparser_tests\optional\complex-data-1.ttl" />
-    <DeploymentItem filename="Testing\testsuite\sparqlparser_tests\graphs\graph-11.ttl" />
-    <DeploymentItem filename="Testing\testsuite\sparqlparser_tests\graphs\data-g2.ttl" />
-    <DeploymentItem filename="Testing\testsuite\sparqlparser_tests\graphs\graph-11.rq" />
-    <DeploymentItem filename="Testing\testsuite\sparqlparser_tests\optional\data.ttl" />
-    <DeploymentItem filename="Testing\testsuite\sparqlparser_tests\graphs\data-g3.ttl" />
-    <DeploymentItem filename="Testing\testsuite\sparqlparser_tests\optional\q-opt-complex-4.rq" />
-    <DeploymentItem filename="Testing\testsuite\sparqlparser_tests\graphs\data-g1.ttl" />
   </Deployment>
-  <TestTypeSpecific />
-</TestRunConfiguration>
+  <Execution>
+    <TestTypeSpecific>
+      <UnitTestRunConfig testTypeId="13cdc9d9-ddb5-4fa4-a97d-d965ccfc6d4b">
+        <AssemblyResolution>
+          <TestDirectory useLoadContext="true" />
+        </AssemblyResolution>
+      </UnitTestRunConfig>
+      <WebTestRunConfiguration testTypeId="4e7599fa-5ecb-43e9-a887-cd63cf72d207">
+        <Browser name="Internet Explorer 7.0">
+          <Headers>
+            <Header name="User-Agent" value="Mozilla/4.0 (compatible; MSIE 7.0; Windows NT 5.1)" />
+            <Header name="Accept" value="*/*" />
+            <Header name="Accept-Language" value="{{$IEAcceptLanguage}}" />
+            <Header name="Accept-Encoding" value="GZIP" />
+          </Headers>
+        </Browser>
+      </WebTestRunConfiguration>
+    </TestTypeSpecific>
+    <AgentRule name="LocalMachineDefaultRole">
+    </AgentRule>
+  </Execution>
+</TestSettings>
